--- a/aspnet-core/src/APIClub.EntityFrameworkCore/APIClub.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/APIClub.EntityFrameworkCore/APIClub.EntityFrameworkCore.csproj
@@ -8,6 +8,7 @@
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FileHelpers" Version="3.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.3" />
